experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/recompilationFailures/98/final-98/tmp/cfr/tmp/output.txt
Test.java:15: error: case, default, or '}' expected
            ** case 65:
            ^
Test.java:15: error: case, default, or '}' expected
            ** case 65:
             ^
Test.java:19: error: illegal start of statement
            case 66: {
            ^
3 errors
